Added new parser for gene reference from xlsx
